fix header positioning on mobile screens

--- a/header.css
+++ b/header.css
@@ -3,14 +3,13 @@ section.header{
     display: grid;
     grid-template-columns: var(--desktop);
     background-color: var(--black); 
-    height: 100px;
+    height: 7rem;
 }
+
 section.header .brand-logo{
     grid-column: 1/ span 6;
     width: 80px;
     height: 80px;
-    margin:10px; 
-    margin-top: 0;
 }
 
 
@@ -23,7 +22,6 @@ section.header .brand-logo{
     font-size: var(--fsDouble);
     font-weight: var(--fw700);
     text-shadow: 1px 2px 2px var(--silver);
-    padding: var(--fsStandard);
 }
 
 .brand-logo:hover .brand-name{
@@ -63,14 +61,9 @@ section.header .toggle-btn i {
 .header-nav{
     display: none;
 }
-/** MEDIA QUERIES FOR LARGER SCREENS **/
+/** MEDIA QUERIES **/
 
 /* TABLET MEDIUM SCREENS */
-@media (min-width: 768px) {
-    
-}
-
-/* DESKTOP LRG SCREENS */
 @media (min-width: 768px) {
     .header-nav{
         cursor: none;
